--- a/MultiCartClient/src/app/product/product.component.html
+++ b/MultiCartClient/src/app/product/product.component.html
@@ -18,7 +18,7 @@
 
             <div class="d-grid gap-2 my-4">
 
-                <a href="#" class="btn btn-info bold-btn">add to cart</a>
+                <a routerLink="" class="btn btn-info bold-btn" (click)="addToCart(product.productId)">add to cart</a>
 
             </div>
         </div>
