orders page design

--- a/MultiCartClient/src/app/cart/cart.component.html
+++ b/MultiCartClient/src/app/cart/cart.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="title">
-        <input type="button" class="btn btn-info" value="Place Order">
+        <input type="button" class="btn btn-info" value="Place Order" (click)="placeOrder()">
     </div>
 
 </div>
