--- a/MultiCartClient/src/app/cart-item/cart-item.component.html
+++ b/MultiCartClient/src/app/cart-item/cart-item.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="image">
-        <img src={{product.image}} alt="" style="height: 60px;"/>
+        <img src={{product.image}} alt="product" style="height: 60px;"/>
     </div>
 
     <div class="col-sm-6 description">
