--- a/MultiCartClient/src/app/login/login.component.html
+++ b/MultiCartClient/src/app/login/login.component.html
@@ -3,6 +3,7 @@
       <img
         id="profile-img"
         src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+        alt = "profile"
         class="profile-img-card"
       />
       <form
