--- a/MultiCartClient/src/app/app.component.html
+++ b/MultiCartClient/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-info">
-    <a routerLink="/home" class="navbar-brand">MultiCart</a>
+    <a routerLink="/home" class="navbar-brand">Rothur Online Shooping</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
         <a routerLink="/home" class="nav-link" routerLink="home" routerLinkActive="active">Home </a>
@@ -35,4 +35,6 @@
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+  <!-- <app-customer-dashboard></app-customer-dashboard> -->
 </div>
+
