--- a/MultiCartClient/src/app/login/login.component.html
+++ b/MultiCartClient/src/app/login/login.component.html
@@ -77,7 +77,7 @@
       <div class="login-text">
         <div class="logo">
           <span><i class="fab fa-speakap"></i></span>
-          <span> MultiCart</span>
+          <span> Rothur Online Shopping</span>
         </div>
         <h1>Log In</h1>
         <p>Level up your shopping experience !! </p>
