--- a/MultiCartClient/src/app/orders/orders.component.html
+++ b/MultiCartClient/src/app/orders/orders.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <app-order-item *ngFor="let item of userOrders" [order]="item">
+    <app-order-item *ngFor="let item of (userOrders$ | async)"  [order]="item"  (click)="deleteOrders(item.orderId, ref)" #ref>
     </app-order-item>
 
     <div class="title">
