--- a/MultiCartClient/src/app/register/register.component.html
+++ b/MultiCartClient/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="login-text">
       <div class="logo">
         <span><i class="fab fa-speakap"></i></span>
-        <span> MultiCart</span>
+        <span> Rothur Online Shopping</span>
       </div>
       <h1>Sign Up</h1>
       <p>Level up your shopping experience !! </p>
